<resources>

    <string name="app_name">UPMiss</string>
    <string name="app_welcome">Welcome·UPMiss·！</string>

    <string name="action_sync">Sync</string>
    <string name="action_save">Save</string>
    <string name="action_find">Discovery</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_update">Check for updates!</string>
    <string name="title_activity_main">UPMiss</string>
    <string name="title_activity_detail">UPMiss</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_create">Create</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_user">Personal center</string>
    <string name="title_activity_follow">Follow</string>
    <string name="title_activity_search_kit">Search</string>
    <string name="title_activity_find">Discovery</string>
    <string name="title_activity_contacts_add">Add Contacts</string>
    <string name="title_activity_contacts_edit">Edit Contacts</string>
    <string name="title_activity_contacts_detail">Contacts</string>

    <string name="title_dialog_relation">Relationship with TA</string>
    <string name="title_select_color">Color</string>
    <string name="title_select_date">Date</string>

    <string name="day">Day</string>
    <string name="date_format">yyyy-MM-dd</string>

    <string name="txt_date_null">YYYY-MM-DD</string>
    <string name="txt_null">Null</string>
    <string name="txt_null_data">Absolutely empty!</string>
    <string name="txt_day">Day</string>
    <string name="txt_year">Year</string>

    <string name="txt_title_login">Login</string>
    <string name="txt_title_join">Join me</string>
    <string name="txt_user">Account</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_confirm">Confirm password</string>
    <string name="txt_email">Email</string>
    <string name="txt_have_account">Account already?</string>
    <string name="txt_have_account_btn">Login</string>
    <string name="txt_not_have_account">Not have account?</string>
    <string name="txt_not_have_account_btn">Register</string>
    <string name="txt_go">GO</string>

    <string name="txt_type_birthday">Birthday</string>
    <string name="txt_type_memorial">Memorial</string>
    <string name="txt_type_future">Future</string>
    <string name="txt_date_lunar">Lunar</string>
    <string name="txt_date_sun">Solar</string>
    <string name="contacts_gender_man">Man</string>
    <string name="contacts_gender_woman">Woman</string>

    <string name="txt_o_share_summary">%1$sDay\nLunar:%2$s\n%3$s days apart\n</string>
    <string name="txt_o_share">Share</string>
    <string name="txt_o_edit">Edit</string>
    <string name="txt_o_delete">Delete</string>
    <string name="txt_o_save">Save shot</string>
    <string name="txt_o_share_qq">QQ</string>
    <string name="txt_o_share_weibo">Weibo</string>
    <string name="txt_o_share_weixin">WeChat</string>
    <string name="txt_o_share_more">More</string>

    <string name="txt_set_alert">Alert</string>
    <string name="txt_set_color">Color</string>
    <string name="txt_set_start">Start</string>
    <string name="txt_set_end">End</string>

    <string name="txt_dialog_color_select">Hello</string>
    <string name="txt_dialog_negative">Cancel</string>
    <string name="txt_dialog_positive">OK</string>

    <string name="txt_status_delete_notes">You are sure to delete?</string>
    <string name="txt_status_sync_start">Synching…</string>
    <string name="txt_status_title_null">Title con\'t empty!</string>

    <string name="txt_tip_error_server_login">Login Failed!</string>
    <string name="txt_tip_error_server_register">Register Failed!</string>
    <string name="txt_tip_error_account">Account or password error!</string>
    <string name="txt_tip_error_password">Account or password error!</string>
    <string name="txt_tip_have_name">The name already exists!</string>
    <string name="txt_tip_have_email">The email already exists!</string>
    <string name="txt_tip_null_user">Account co\'t empty!</string>
    <string name="txt_tip_null_password">Password should be 6~18 len</string>
    <string name="txt_tip_null_email">Email co\'t empty!</string>

    <string name="txt_remind_day">Remind a few days in advance</string>

    <string name="txt_how_add_show_way">HOW TO ADD WIDGET</string>
    <string name="txt_add_show_way_widget">Widget</string>
    <string name="btn_add_widget_way">Add desktop widget</string>
    <string name="txt_add_show_way_float_frame">Popup window</string>
    <string name="btn_add_float_frame_way">About popup window</string>
    <string name="btn_add_float_frame_way_toast">Dev…</string>

    <string name="txt_why_add_widget">In order to better use UPMiss, add her widgets on the desktop! \\n can see her at any time.</string>
    <string name="txt_add_widget_first">Long press the desktop, and then click Add plug-in, you can find her.</string>
    <string name="txt_add_widget_second">Have you found it? Next long press UPMiss widget pulled to the desktop~</string>
    <string name="txt_other_add_widget">Add widgets are the same way, if not found \n, you can search for Google.</string>
    <string name="txt_about_desc">Record your important day~~</string>

    <string name="btn_guide_skip">Starting</string>
    <string name="txt_guide_app_title">『Welcome』</string>
    <string name="txt_guide_app_details">Record your important day.</string>
    <string name="txt_guide_synchronization_title">『Cloud Sync』</string>、
    <string name="txt_guide_synchronization_details">Anytime, multiple devices synching!</string>
    <string name="txt_guide_timer_shaft_title">『Time Line』</string>
    <string name="txt_guide_timer_shaft_details">Order by time, Anytime Anywhere, Refused Miss.</string>
    <string name="txt_guide_gift_Shop_title">『Shop』</string>
    <string name="txt_guide_gift_Shop_details">Shopping</string>
    <string name="txt_guide_square_benediction_title">『Bless』</string>
    <string name="txt_guide_square_benediction_details">Collect blessings and surprise.</string>
    <string name="txt_guide_alert_title">『Alert』</string>
    <string name="txt_guide_alert_details">Clear, don\'t bother, don\'t miss</string>

    <string name="txt_find_gift">Gift</string>
    <string name="txt_find_wish">Bless wish</string>
    <string name="txt_find_day">Look</string>
    <string name="txt_find_account">User Center</string>

    <string name="txt_user_code">Following me</string>
    <string name="txt_user_account">Account</string>
    <string name="txt_user_name">Name</string>
    <string name="txt_user_sex">Sex</string>

    <string name="txt_quick_add">Add</string>
    <string name="txt_contacts_QQ">QQ</string>
    <string name="txt_contacts_phone">Phone</string>
    <string name="txt_contacts_relation">IS</string>
    <string name="txt_contacts_select">Select</string>

    <string name="radio_user_sex_man">Man</string>
    <string name="radio_user_sex_woman">Woman</string>
    <string name="txt_user_color">Color</string>
    <string name="btn_user_color">Like color</string>
    <string name="btn_user_save">SAVE</string>
    <string name="txt_user_status_ok">Save succeed~</string>
    <string name="txt_user_status_account">Sign in to use!</string>
    <string name="txt_user_status_sync">Sync failed, check your network</string>
    <string name="txt_user_status_name">Name con\'t empty.</string>

    <string name="txt_contacts_save_failing">Save failed</string>
    <string name="txt_contacts_name">Please enter name</string>
    <string name="txt_contacts_people">Please enter phone</string>

    <string name="txt_search_kit_submit">Search</string>
    <string name="txt_search_kit_str_lunar">Lunar:%s</string>
    <string name="txt_search_kit_str_sun">Solar:%s</string>
    <string name="txt_search_kit_str_distance">%s days apart</string>
    <string name="txt_search_kit_str_zodiac">Zodiac:%s</string>
    <string name="txt_search_kit_str_week">Week:%s</string>
    <string name="txt_search_kit_str_constellation">Constellation:%s</string>

    <string name="txt_contacts_detail_phone">Phone:%s</string>
    <string name="txt_contacts_detail_qq">QQ:%s</string>
    <string name="txt_contacts_detail_gender">Sex:%s</string>
    <string name="txt_contacts_detail_relation">Relation:%s</string>
    <string name="txt_contacts_gain_failure">Get it failed~</string>
    <string name="txt_contacts_man">Husband</string>
    <string name="txt_contacts_woman">Wife</string>
    <string name="txt_contacts_concern_relation">Relation</string>

    <string name="toast_check_updating">Check update…</string>
    <string name="toast_check_update_new">Already latest version！</string>

    <string name="txt_update_title">Update（%1$s）</string>
    <string name="txt_update_cancel">Cancel</string>
    <string name="txt_update_submit">Update</string>

    <string name="txt_about_version">Version: 3.0.0</string>
    <string name="txt_about_email">Email: qiujuer@live.cn</string>
    <string name="txt_about_group">QQGroup: 387403637</string>
    <string name="txt_about_alipay">AliPay: qiujuer</string>
    <string name="txt_about_wechat">WeChat: qiujuerman</string>

</resources>
