<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_find"
        android:orderInCategory="100"
        android:title="@string/txt_find_day"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync"
        android:actionLayout="@layout/toolbar_menu_sync_action"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:actionLayout="@layout/toolbar_menu_sync_action"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
