<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    tools:context=".view.activity.HelpActivity"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/len_32"
        android:paddingTop="@dimen/status_bar_height">

        <TextView
            fontPath="fonts/FZLanTingHeiS-DB1-GB-Regular.TTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/len_16"
            android:text="@string/txt_how_add_show_way"
            android:textColor="@color/cyan_500"
            android:textSize="@dimen/font_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_why_add_widget"
            android:textColor="@color/grey_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/len_8"
            android:paddingTop="@dimen/len_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/len_8"
                android:text="@string/txt_add_widget_first"
                android:textColor="@color/grey_700" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:contentDescription="@string/txt_null"
                android:src="@mipmap/ic_help_find_widgets_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/len_16"
            android:paddingTop="@dimen/len_8">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:contentDescription="@string/txt_null"
                android:src="@mipmap/ic_help_find_widgets_2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/len_8"
                android:text="@string/txt_add_widget_second"
                android:textColor="@color/grey_700" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_other_add_widget"
            android:textColor="@color/grey_700" />
    </LinearLayout>
</ScrollView>

