<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FindActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_blur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lay_8"
        android:layout_marginTop="@dimen/blur_toolbar_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/lay_32"
        android:paddingLeft="@dimen/lay_32"
        android:paddingRight="@dimen/lay_32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_gif"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16"
                android:text="@string/txt_find_gift" />

            <include layout="@layout/include_find_interval_h" />

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_wish"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16"
                android:text="@string/txt_find_wish" />
        </LinearLayout>

        <include layout="@layout/include_find_interval_v" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_richScan"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16" />

            <include layout="@layout/include_find_interval_h" />

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_search_kit"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16"
                android:text="@string/txt_find_day" />
        </LinearLayout>

        <include layout="@layout/include_find_interval_v" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_ads"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16" />

            <include layout="@layout/include_find_interval_h" />

            <net.qiujuer.tips.common.widget.IntervalButton
                android:id="@+id/btn_find_user"
                style="@style/Text.Find.Title"
                android:layout_margin="@dimen/lay_16"
                android:text="@string/txt_find_account" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
